<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/simplecalc"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/value_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="Autofill, LabelFor" />

        <TextView
            android:id="@+id/view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/valor_2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/value_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsGroup"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/views"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/adicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:onClick="buttonAction"
            android:tag="1"
            android:text="@string/adicao" />

        <Button
            android:id="@+id/subtracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="20"
            android:onClick="buttonAction"
            android:tag="2"
            android:text="@string/subtracao" />

        <Button
            android:id="@+id/multiplicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="20"
            android:onClick="buttonAction"
            android:tag="3"
            android:text="@string/multiplicacao" />

        <Button
            android:id="@+id/divisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="20"
            android:onClick="buttonAction"
            android:tag="4"
            android:text="@string/divisao" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fotter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/resultView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
